# osx-extern-struct-linker-error

./: .travis.yml  CMakeLists.txt  README.md  README.rst  foo.c  foo.h  main.c
